[package]
name = "ais-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ais-core = { path = "../ais-core" }
ais-engine = { path = "../ais-engine" }
ais-evm-executor = { path = "../ais-evm-executor" }
ais-sdk = { path = "../ais-sdk" }
ais-solana-executor = { path = "../ais-solana-executor" }
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
