[package]
name = "ais-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ais-core = { path = "../ais-core" }
ais-cel = { path = "../ais-cel" }
ais-schema = { path = "../ais-schema" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
futures.workspace = true
regex.workspace = true
num-bigint = "0.4"
